--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ onload="setTimeout ('document.body.style.visibility = \'visible\'', 2)">
                 <button class="product_card">
                     <div class="product_image">
                         <div class="product_open"><h2><small>🔍︎</small> просмотр</h2></div>
-                        <img src="images/Strips.png" width="454px" height="454px" alt=""></img>
+                        <img src="images/products/Sweater.png" width="454px" height="454px" alt=""></img>
                     </div>
 
                     <div class="product_info" id="product_info">
