--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@ onload="setTimeout ('document.body.style.visibility = \'visible\'', 2)">
     </div>
     <div class="making">
         <h1>О команде:</h1>
-        <h2><p><i>Лужинский Владимир</i> (Vovursik) - основная деятельно: разработка видеоигр / модификация</p>
+        <h2><p><i>Лужинский Владимир</i> (Vovursik) - основная деятельно: разработка видеоигр / модификаций</p>
             <p><i>Дорошин Георгий</i> ( ) - основная деятельность: Моделирование</p></h2>
     </div>
     <div class="making">
@@ -115,7 +115,7 @@ onload="setTimeout ('document.body.style.visibility = \'visible\'', 2)">
     <div class="making">
         <h1>Немного о three.js:</h1>
         <h2>Технология three.js позволяет размещать на сайте сцены с 3D объектами, работать с их освещением и анимациями. 
-            На нашем сайте данная технология не полностью раскрыта в своем потенциале, мы лишь использовали её маленькую часть.
+            На нашем сайте данная технология не полностью раскрыта в своем потенциале, использована только её маленькая часть.
             Для того, чтобы ознакомится со всеми фишками three.js, можно просто перейти на официальный сайт разработчиков по одной из ссылок выше.
         </h2>
     </div>
