--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@ onload="setTimeout ('document.body.style.visibility = \'visible\'', 2)">
         <h1>Немного о three.js:</h1>
         <h2>Технология three.js позволяет размещать на сайте сцены с 3D объектами, работать с их освещением и анимациями. 
             На нашем сайте данная технология не полностью раскрыта в своем потенциале, использована только её маленькая часть.
-            Для того, чтобы ознакомится со всеми фишками three.js, можно просто перейти на официальный сайт разработчиков по одной из ссылок выше.
+            Для того, чтобы ознакомиться со всеми фишками three.js, можно просто перейти на официальный сайт разработчиков по одной из ссылок выше.
         </h2>
     </div>
     <div class="making">
