--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@ onload="setTimeout ('document.body.style.visibility = \'visible\'', 2)">
     </div>
     <div class="making">
         <h1>Детали:</h1>
-        <h2><p>Все модели созданны Георгием Дорошины и принадлежат ему лично!</p>
+        <h2><p>Все модели созданны Георгием Дорошиным и принадлежат ему лично!</p>
             <p>Все программные и дизайнерские решения сайта принадлежат Лужинскому Владимиру!</p></h2>
     </div>
 </div>
