--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@ onload="setTimeout ('document.body.style.visibility = \'visible\'', 2)">
     </div>
     <div class="making">
         <h1>О команде:</h1>
-        <h2><p><i>Лужинский Владимир</i> (Vovursik) - основная деятельно: разработка видеоигр / модификаций</p>
+        <h2><p><i>Лужинский Владимир</i> (Vovursik) - основная деятельность: разработка видеоигр / модификаций</p>
             <p><i>Дорошин Георгий</i> ( ) - основная деятельность: Моделирование</p></h2>
     </div>
     <div class="making">
