--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@ onload="setTimeout ('document.body.style.visibility = \'visible\'', 2)">
     <div class="making">
         <h1>О команде:</h1>
         <h2><p><i>Лужинский Владимир</i> (Vovursik) - основная деятельность: разработка видеоигр / модификаций</p>
-            <p><i>Дорошин Георгий</i> ( ) - основная деятельность: Моделирование</p></h2>
+            <p><i>Дорошин Георгий</i> ( ) - основная деятельность: 3D</p></h2>
     </div>
     <div class="making">
         <h1>Использованные источники:</h1>
