--- a/index.html
+++ b/index.html
@@ -123,6 +123,19 @@ onload="setTimeout ('document.body.style.visibility = \'visible\'', 2)">
                     </div>
                 </button>
             </form>
+            <form action="/product_03.html" id="form">
+                <button class="product_card">
+                    <div class="product_image">
+                        <div class="product_open"><h2><small>🔍︎</small> просмотр</h2></div>
+                        <img src="images/products/Sticker.png" width="454px" height="454px" alt=""></img>
+                    </div>
+
+                    <div class="product_info" id="product_info">
+                        <h1>Стикер</h1>
+                        <h2>50 руб.</h2>
+                    </div>
+                </button>
+            </form>
 
         </div>
     </div>
