--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@ onload="setTimeout ('document.body.style.visibility = \'visible\'', 2)">
             <p>Верстка - <i>Лужинский Владимир</i></p>
             <p>Программирование на JS - <i>Лужинский Владимир</i></p>
             <p>2D изображения - <i>Лужинский Владимир</i></p>
-            <p>3D модели - <i>Дорошин Георгий / Лужинский Владимир (частично)</i></p>
+            <p>3D модели - <i>Дорошин Георгий / Лужинский Владимир</i></p>
             <p>Текстурирование 3D моделей - <i>Дорошин Георгий</i></p>
             <p>2D рендер моделей - <i>Дорошин Георгий</i></p></h2>
     </div>
